css/main.css
body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
    margin: 0;
    padding: 0;
}

html {
    box-sizing: border-box;
}

*, *:before, *:after {
    box-sizing: inherit;
}

a {
    text-decoration: none;
    color: black;
}

#container {
    display: flex;
    flex-direction: column;
    /* justify-content: row; */
    max-width: 100%;
    /* height: 64em; */
    height: 100%;
    overflow: hidden;
    position: relative;
}

/* Nav items */
.header-container {
    display: flex;
    justify-content: space-between;
    /* align-items: center; */
    height: 22em;
    max-width: 100%;
}

header {
    display: flex;
    justify-content: space-between;
    max-width: 100%;
}

.logo-title {
    margin: 2em;
    height: 40px;
    width: 40px;
}

.full-nav {
    position: absolute;
    top: 3em;
    right: 2em;
    z-index: 1;
    user-select: none;
}

.full-nav input {
    display: block;
    width: 40px;
    height: 32px;
    position: absolute;
    /* top: 64px;
    right: 25px; */
    cursor: pointer;
    z-index:2;
    opacity: 0;
}

.full-nav span {
    display: block;
    background-color: black;
    height: 4px;
    width: 33px;
    margin-bottom: 5px;
    position: relative;
    border-radius: 3px;
    transform-origin: 4px 0px;
    transition-property: transform, background, opacity;
    transition-duration: 0.5s, 0.5s, 0.55s;
    transition-timing-function: cubic-bezier(0.77, 0.2, 0.05, 1), cubic-bezier(0.77, 0.2, 0.05, 1), ease;
    transition-delay: 0s, 0s, 0s;
}

header .full-nav input:checked ~ ul {
    transform: scale(1, 1);
    opacity: 1;
}

header .full-nav span:nth-last-child(2) {
    transform-origin: 0% 100%;
    background: black;
}

header .full-nav input:checked ~ span {
    opacity: 1;
    transform: rotate(45deg) translate(-2px, -1px);
    background: black;
}

header .full-nav input:checked ~ span:nth-last-child(3) {
    opacity: 0;
    transform: rotate(0deg) scale(0.2, 0.2);
    background: black;
}

header .full-nav input:checked ~ span:nth-last-child(2) {
    opacity: 1;
    transform: rotate(-45deg) translate(0, -1px);
    background: black;
}

.nav-list {
    background-color: #79a9c5;
    position: absolute;
    margin: -200px 0 0 -210px;
    padding: 20px;
    padding-top: 305px;
    transform-origin: 0% 0%;
    transform: translate(180%, 0%);
    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
    z-index: -1;
    width: 20em;
}

.header-li {
    list-style-type: none;
    font-size: 30px;
    padding: 6px;
}

/* Main Content */
.main-container {
    display: flex;
    justify-content: center;
}

#main-title {
    display: flex;
    justify-content: center;
    font-size: 25px;
    width: 16em;
}

#sub-title {
    display: flex;
    justify-content: center;
    margin: 1em 0em;
}

/********** Tablet Styles *************/
@media only screen and (min-width: 401px) and (max-width: 960px) {

/* Nav items */
#main-title {
    width: 100%;
}
}

/********** Desktop Styles *************/
@media only screen and (min-width: 961px) {

    /* Nav items */
#main-title {
    width: 100%;
}
}

